objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>avg__c</fullName>
        <label>avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
        <fields>
        <fullName>sum__c</fullName>
        <label>sum/label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
        
        <fields>
        <fullName>sum1__c</fullName>
        <label>sum1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AAAA__c</fullName>
        <externalId>true</externalId>
        <label>AAAA</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>